--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,5 +6,4 @@ $pink: #d22856;
 $mobile-max: 659px;
 $tablet: 660px;
 $tablet-max: 959px;
-// $desktop: 960px;
-$desktop: 3000px;
+$desktop: 960px;
